Closed
Bug 648249
Opened 14 years ago
Closed 14 years ago
Build error with gcc4.5
Categories
(Tamarin Graveyard :: Virtual Machine, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
Q1 12 - Brannan
People
(Reporter: treilly, Assigned: pnkfelix)
References
Details
Attachments
(1 file)
|
2.09 KB,
patch
|
treilly
:
review+
|
Details | Diff | Splinter Review |
Hi,
I'm looking at a compile error on GCC4.5. It complains about setting NULL to a non pointer type.
On linux vmpi_thread_t is defined as pthread_t. That's a long int, not a pointer, so the error.
/home/ambry/flash/split/third_party/avmplus/MMgc/GC.cpp: In member function ‘void MMgc::GC::ThreadLeave(bool, MMgc::GC*)’:
/home/ambry/flash/split/third_party/avmplus/MMgc/GC.cpp:3495:26: error: converting to non-pointer type ‘vmpi_thread_t’ from NULL
make[2]: *** [CMakeFiles/mmgc.dir/home/ambry/flash/split/third_party/avmplus/MMgc/GC.cpp.o] Error 1
make[1]: *** [CMakeFiles/mmgc.dir/all] Error 2
| Assignee | ||
Comment 1•14 years ago
|
||
I'm not an expert in how pthreads are implemented on various host environments, but the spectre of NULL/0 being confused with another valid thread id is a bit scary. Filed as Bug 656008.
| Assignee | ||
Comment 2•14 years ago
|
||
(unlike pthread_t, this one is super easy to deal with.)
Attachment #531330 -
Flags: review?(treilly)
| Reporter | ||
Updated•14 years ago
|
Attachment #531330 -
Flags: review?(treilly) → review+
Comment 3•14 years ago
|
||
changeset: 6296:9c4b988f4c07
user: Felix S Klock II <fklockii@adobe.com>
summary: Bug 648249: cleanup handling of markStackSentinel (r=treilly).
http://hg.mozilla.org/tamarin-redux/rev/9c4b988f4c07
Comment 4•14 years ago
|
||
Assigning this since no one did before.
Assignee: nobody → fklockii
Status: NEW → ASSIGNED
Flags: flashplayer-qrb+
Flags: flashplayer-injection-
Flags: flashplayer-bug-
Priority: -- → P3
Target Milestone: --- → Q1 12 - Brannan
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
This bug, as described is a dup of 656008, but the submitted fixes a related problem. Closing this bug which fixes a related build error.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•