Bug 648249: cleanup handling of markStackSentinel (r=treilly).

Switch from ptr to uintptr_t was introduced in
  Bug 632453 changeset 5949:de5eae0d18f6
  http://hg.mozilla.org/tamarin-redux/rev/de5eae0d18f6